--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
+
+
     <title>Swallowtail Tea</title>
     <link rel="shortcut icon" type="image/png" href="assets/img/favicon.png"/>
     <link rel="icon" type="image/x-icon" href="img/favicon.png">
@@ -28,7 +31,10 @@
             <ul>
                 <li>Teas</li>
                 <li>Brew Wares</li>
-                <li>Cart</li>
+                <li>Cart
+                    <i style="text-align: right;" class="fa-solid fa-lock"></i>
+
+                </li>
                 <li>Merch</li>
                 <li>About us</li>
                 <li>Wholesale</li>
