added some stuff

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
     
 </head>
 <body>
-    <div class="Teas">
-            <div class="Teac1"><img src="https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/black_ad4be5cb-6a95-484a-bb94-2239b1a929ec_400x400_crop_center.png?v=1526857313&auto=format&q=50&" /> </div>
+    <div class="teas">
+            <div class="teac1"><img src="https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/black_ad4be5cb-6a95-484a-bb94-2239b1a929ec_400x400_crop_center.png?v=1526857313&auto=format&q=50&" /> </div>
             <p class = "tealign">Black</p>
-            <div class="Teac2"><img src ="https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/green_185f8bdd-cab4-49e0-bedf-b28cdf516b0a_400x400_crop_center.png?v=1526857011&auto=format&q=50&"/></div>
+            <div class="teac2"><img src ="https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/green_185f8bdd-cab4-49e0-bedf-b28cdf516b0a_400x400_crop_center.png?v=1526857011&auto=format&q=50&"/></div>
             <p class = "tealign">Green</p>
-            <div class="Teac3"><img src ="https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/white_759d97b9-d4b2-48d2-882f-0d1b9ccff0ab_400x400_crop_center.png?v=1526857136&auto=format&q=50&"/></div>
+            <div class="teac3"><img src ="https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/white_759d97b9-d4b2-48d2-882f-0d1b9ccff0ab_400x400_crop_center.png?v=1526857136&auto=format&q=50&"/></div>
             <p class = "tealign">White</p>
-            <div class="Teac4"><img src= "https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/tisane_400x400_crop_center.png?v=1526856907&auto=format&q=50&"/></div>
+            <div class="teac4"><img src= "https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/tisane_400x400_crop_center.png?v=1526856907&auto=format&q=50&"/></div>
             <p class = "tealign">Tisanes</p>
-            <div class="Teac5"> <img src = "https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/blend_400x400_crop_center.png?v=1526857239&auto=format&q=50&"/></div>
+            <div class="teac5"> <img src = "https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/blend_400x400_crop_center.png?v=1526857239&auto=format&q=50&"/></div>
             <p class = "tealign">Blends</p>
     </div>
         <div class="three">
