--- a/index.html
+++ b/index.html
@@ -91,21 +91,53 @@
 
     </div>
 
-    <script>
-        $(document).ready(function(){
-            var count = 0;
-            var content = '';
-            var j = setInterval(function () {
-                count++;
-                if(count%2===0){
-                    content = $('#sale').css();
-                }else{
-                    content = $('#steep').css();
-                }
-                $('#show').html(content);
-            }, 5000);
-        });
-        </script>
+    <div class = "footer">
+        <div class = "footer1">
+            <div class = "footerhead"> 
+                <h3>SHOP</h3>
+                <h3>TERMS OF SERVICE</h3>
+            </div>
+            <ul>
+                <li>All</li>
+                <li>Teas</li>
+                <li>Merch</li>
+                <li>Brew Wares</li>               
+            </ul>
+
+        </div>
+
+        <div class = "footer2">
+            <div class = "footerhead"> 
+                <h3>COMPANY</h3>
+                <h3>REFUND POLICY</h3>
+            </div>
+            <ul>
+                <li>Wholesale</li>
+                <li>About Us</li>
+                <li>Contact Us</li>
+                <li>FAQs</li>               
+            </ul>
+        </div>
+        <div class = "footer3">
+            <div class = "footerhead"> 
+                <h3>ACCOUNT</h3>
+            </div>
+            <ul>
+                <li>My Orders</li>
+                <li>Sign Up</li>
+            </ul>
+        </div>
+        <div class = "footer4">
+            <div class = "footerhead"> 
+                <h3>LEGAL</h3>
+            </div>
+
+            <ul>
+                <li>Terms & Conditions</li>
+                <li>Privacy Policy</li>             
+            </ul>
+        </div>
+    </div>
     
 
     <script src="assets/js/main.js"></script>
