--- a/index.html
+++ b/index.html
@@ -95,53 +95,23 @@
 
     </div>
 
-    <div class = "footer">
-        <div class = "footer1">
-            <div class = "footerhead"> 
-                <h3>SHOP</h3>
-                <h3>TERMS OF SERVICE</h3>
-            </div>
-            <ul>
-                <li>All</li>
-                <li>Teas</li>
-                <li>Merch</li>
-                <li>Brew Wares</li>               
-            </ul>
-
+    <div class = "foothead">
+        <div class = "fh1"> 
+            <li><h3>SHOP</h3></li>
+            <li><h3>TERMS OF SERVICE</h3></li>
+        </div>     
+        <div class = "fh2">
+            <h3>COMPANY</h3>
+            <h3>REFUND POLICY</h3>
         </div>
-
-        <div class = "footer2">
-            <div class = "footerhead"> 
-                <h3>COMPANY</h3>
-                <h3>REFUND POLICY</h3>
-            </div>
-            <ul>
-                <li>Wholesale</li>
-                <li>About Us</li>
-                <li>Contact Us</li>
-                <li>FAQs</li>               
-            </ul>
+        <div class = "fh3">
+            <h3>ACCOUNT</h3>
         </div>
-        <div class = "footer3">
-            <div class = "footerhead"> 
-                <h3>ACCOUNT</h3>
-            </div>
-            <ul>
-                <li>My Orders</li>
-                <li>Sign Up</li>
-            </ul>
-        </div>
-        <div class = "footer4">
-            <div class = "footerhead"> 
-                <h3>LEGAL</h3>
-            </div>
-
-            <ul>
-                <li>Terms & Conditions</li>
-                <li>Privacy Policy</li>             
-            </ul>
-        </div>
+        <div class = "fh4">
+            <h3>LEGAL</h3>  
+        </div>  
     </div>
+    
     
 
     <script src="assets/js/main.js"></script>
