--- a/index.html
+++ b/index.html
@@ -97,22 +97,62 @@
 
     <div class = "foothead">
         <div class = "fh1"> 
-            <li><h3>SHOP</h3></li>
-            <li><h3>TERMS OF SERVICE</h3></li>
+            <ul>
+                <li><h3>SHOP</h3></li>
+                <li><h3>TERMS OF SERVICE</h3></li>
+            </ul>
         </div>     
         <div class = "fh2">
-            <h3>COMPANY</h3>
-            <h3>REFUND POLICY</h3>
+            <ul>
+                <li><h3>COMPANY</h3></li>
+                <li><h3>REFUND POLICY</h3></li>
+            </ul>
         </div>
         <div class = "fh3">
-            <h3>ACCOUNT</h3>
+            <ul>
+                <li><h3>ACCOUNT</h3></li>
+            </ul>
         </div>
         <div class = "fh4">
-            <h3>LEGAL</h3>  
+            <ul>
+                <li><h3>LEGAL</h3></li>
+            </ul>  
         </div>  
     </div>
     
-    
+    <div class = "footbod">
+        <div class = "fb1">
+            <ul>
+                <li><h4>ALL</h4></li>
+                <li><h4>Teas</h4></li>
+                <li><h4>Merch</h4></li>
+                <li><h4>Brew Wares</h4></li>
+            </ul>
+        </div>
+        <div class = "fb2">
+            <ul>
+                <li><h4>Wholesale</h4></li>
+                <li><h4>About Us</h4></li>
+                <li><h4>Contact Us</h4></li>
+                <li><h4>FAQs</h4></li>
+            </ul>
+        </div>
+        <div class = "fb3">
+            <ul>
+                <li><h4>My Orders</h4></li>
+                <li><h4>Sign Up</h4></li>
+            </ul>
+        </div>
+        <div class = "fb4">
+            <ul>
+                <li><h4>Terms & Conditions</h4></li>
+                <li><h4>Privacy Policy</h4></li>
+            </ul>
+        </div>
+
+    </div>
+
+
 
     <script src="assets/js/main.js"></script>
 
