Updating some of the pages and playing around with getting images looking good with text

--- a/second.html
+++ b/second.html
@@ -34,7 +34,7 @@
             </div>
          </div>
                    
-         <div class ="teasnav, sixfont"> Teas</div>
+        <div class ="teasnav, sixfont"> Teas</div>
         <div class ="brewwaresnav, sixfont"> Brew Wares</div>
         <div class ="cart, sixfont"> Cart</div>
         <div class ="merch, sixfont"> Merch</div>
@@ -43,17 +43,28 @@
     </div>
     <body>
         <div class = "warespage"><img src="https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/black_ad4be5cb-6a95-484a-bb94-2239b1a929ec_400x400_crop_center.png?v=1526857313&auto=format&q=50&" />
-            <div><img src="https://swallowtailtea.imgix.net/s/files/1/2960/1850/products/lotus_candle_updated.png?v=1526835738&auto=format&w=630&q=50" /></div>
-            <div><img src="https://swallowtailtea.imgix.net/s/files/1/2960/1850/products/cup_candle.png?v=1526836305&auto=format&w=630&q=50" /></div>
-            <div><img src= "https://swallowtailtea.imgix.net/s/files/1/2960/1850/products/cup_candle.png?v=1526836305&auto=format&w=630&q=50"/></div>
-            <div><img src= "https://swallowtailtea.imgix.net/s/files/1/2960/1850/products/tealight.png?v=1526837456&auto=format&w=630&q=50"/></div>
-            <div><img src= "https://swallowtailtea.imgix.net/s/files/1/2960/1850/products/candle_gift.png?v=1526836547&auto=format&w=630&q=50"/></div>
-            <div><img src= "https://swallowtailtea.imgix.net/s/files/1/2960/1850/products/handmade_matcha.png?v=1526838898&auto=format&w=630&q=50"/></div>
-            <div><img src= "https://swallowtailtea.imgix.net/s/files/1/2960/1850/products/matcha_whisk.png?v=1526839666&auto=format&w=630&q=50"/></div>
-            <div><img src= "https://swallowtailtea.imgix.net/s/files/1/2960/1850/products/honey.png?v=1526835034&auto=format&w=630&q=50"/></div>
-            <div><img src= "https://swallowtailtea.imgix.net/s/files/1/2960/1850/products/white_service.png?v=1526842452&auto=format&w=630&q=50"/></div>
-            <div><img src= "https://swallowtailtea.imgix.net/s/files/1/2960/1850/products/celadon_service.png?v=1526843103&auto=format&w=630&q=50"/></div>
-            <div><img src= "https://swallowtailtea.imgix.net/s/files/1/2960/1850/products/petit_teapot.jpg?v=1621350878&auto=format&w=630&q=50"/></div>       
+            <div class = "beeswax">
+                <div class = "waresdesc">
+                    <p>Beeswax Lotus Candle</p>
+                </div>
+            </div>
+            <div class = "teacup">
+                <div class = "waresdesc">
+                    <p>Teacup-shaped Beeswax Tealight </p>
+                </div>
+            </div>
+            <div class = "tealight"></div>
+            <div class = "giftset"></div>
+            <div class = "bowl"></div>
+            <div class = "bluebowl"></div>
+            <div class = "whisk"></div>
+            <div class = "honey"></div>
+            <div class = "teaservice"></div>
+            <div class = "celadon"></div>
+            <div class = "petit"></div>
+
+
+
         </div>
 
         
