build(Landing page): added in different fonts on different images through the slideshow

--- a/index.html
+++ b/index.html
@@ -63,15 +63,18 @@
                 </div>
             </div>
             <div class = "test sale">
+                <h1 class = "testmain  mb2"> Steeped In Passion</h1>
+                <h2 class = "testmain hov"> Free Shippping on Orders > $40</h2>
             </div>
             <div class = "test wholesale">
+                <h1 class = "testmain  mb2"> Wholesale Program</h1>
+                <h2 class = "testmain hov"> Learn More</h2>
             </div>
-            <div class = "test steep">
+            <div class = "test steep mb2">
+                <h1 class = "testmain  mb2"> Bring Swallowtail Home</h1>
+                <h2 class = "testmain hov"> Shop Now</h2>
             </div>
-        </div>
-        
-    </div>
-    
+        </div>            
 
     <div class="teas">
             <div>
