--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/main.css" />
+
     <link rel="stylesheet" href= "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"/>
 
     <title>Swallowtail Tea</title>
@@ -77,10 +78,11 @@
         </div>            
 
     <div class="teas">
+        <!-- 
             <div>
-               <!-- <div class="teac1"> -->
+              
                     <img src="https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/black_ad4be5cb-6a95-484a-bb94-2239b1a929ec_400x400_crop_center.png?v=1526857313&auto=format&q=50&" /> 
-                <!-- </div> -->
+                
                 <p class = "tealign hov">Black</p>
             </div>
 
@@ -102,7 +104,7 @@
 
             <div> <img src = "https://swallowtailtea.imgix.net/s/files/1/2960/1850/files/blend_400x400_crop_center.png?v=1526857239&auto=format&q=50&"/>
                 <p class = "tealign hov">Blends</p>
-            </div>
+            </div> -->
 
     </div>
         <div class="three">
@@ -200,7 +202,7 @@
 
 
     <script src="assets/js/main.js"></script>
-
+    <script src="assets/js/fetch.js"></script>
 
 
 </body>
